<resources>
    <string name="app_name">Collaborators</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="message"></string>
    <string name="signIn">Sign in</string>
    <string name="remember">Remember Credentials</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="profile">Profile</string>
    <string name="signOut">Sign out</string>
    <string name="yourCollaborations">Your Collaborations</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="save">Save</string>
    <string name="updateProfile">Update Profile</string>
    <string name="screenName">Screen Name</string>
    <string name="email">Email</string>
    <string name="createAccount">Create Account</string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="searchAUsername">Search By Username</string>
    <string name="search">Search</string>
    <string name="startCollaboration">Start a Collaboration</string>


    <string name="title_activity_test">test</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_create">Create an Account</string>
    <string name="notifyWithMessenger">Notify With Messenger</string>
    <string name="notifyWithEmail">Notify With Email</string>
    <string name="returnToHome">Return</string>
    <string name="notifyNew">You can click a button to communicate with your collaborator.</string>
    <string name="downloadFile">Download Project</string>
</resources>
