<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/txtStartedCollaboration"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/startCollaboration"/>
    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notifyNew"/>
    <Button
        android:layout_marginTop="30dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="notifyWithMessenger"
        android:text="@string/notifyWithMessenger" />
    <Button
        android:layout_marginTop="30dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="notifyWithEmail"
        android:text="@string/notifyWithEmail" />
    <Button
        android:layout_marginTop="30dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="downloadFile"
        android:text="@string/downloadFile" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/message" />
    <Button
        android:layout_marginTop="30dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="returnToHome"
        android:text="@string/returnToHome" />
</LinearLayout>