<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/txtHomeUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/username"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:onClick="profile"
            android:layout_toLeftOf="@+id/btnSignOut"
            android:text="@string/profile" />
        <Button
            android:id="@+id/btnSignOut"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="signOut"
            android:layout_alignParentRight="true"
            android:text="@string/signOut" />
    </RelativeLayout>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:onClick="startCollaboration"
        android:text="@string/startCollaboration" />
    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yourCollaborations"/>
    <ListView
        android:id="@id/list_view"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>
</LinearLayout>